# 0.00.08 (60959) Feb 2, 2012
2/2/12 add interviews flavor (with data collection enabled) to build.properties
2/2/12 add wavelength control (from piccolo-phet)
2/2/12 add basic light model and view
2/2/12 more work on light controls
2/1/12 intermediate pass at light controls
2/1/12 set up framework for 2nd tab canvas and model
2/1/12 repackage in preparation for starting second tab
2/1/12 ===== begin implementation of "Beer's Law" tab =============================================================
2/1/12 added sim-sharing message for attempt to interact with unmovable meter body
1/31/12 move symobls to their own file, so that ResourceGenerator can be used for strings and images
1/31/12 add hand cursor to dropper, to indicate that it's movable
1/31/12 until combo box popup can be properly addressed (see #3242), move solute control panel (which includes combo box) to the front
1/31/12 prevent concentration probe from being dragged off the bottom of the stage
# 0.00.07 (60842) Jan 31, 2012
1/31/12 implement reset for Shaker, so it doesn't dispense solute when Reset All resets its location
1/31/12 dispense solute particles when shaker is moving
1/31/12 delete shaker particles when they reach the surface of the solution, add corresponding amount of solute to the solution
1/31/12 handle collisions between solute particles and beaker wall
1/30/12 make solute particles accelerate properly
1/30/12 adjust Solute fields related to particles
1/30/12 create shaker particles with random orientations
1/26/12 make concentration meter expand to fit title
1/26/12 create TiledBackgroundNode, takes 3 images and tiles them to fit a specified width
1/25/12 separate strings for Concentration tab and meter title
1/25/12 add strings for "Beer's Law" tab
1/25/12 add faint stroke to all fluids (solution, faucets, stock)
1/23/12 fix flat spot on top of concentration probe image
1/19/12 remove excessive negative space from concentration meter
1/19/12 put units under concentration meter title